<?xml version="1.0" encoding="utf-8"?>
<!-- 

 -->
<ScrollView  
     xmlns:android="http://schemas.android.com/apk/res/android"  
     android:id="@+id/RootLayout"  
     android:layout_width="fill_parent"  
     android:layout_height="fill_parent"  
     android:scrollbars="vertical">  
     
<LinearLayout 
    android:orientation="vertical" 
    android:id="@+id/MainLayout" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content">
    
<TextView      
android:text="@string/activity_label"
android:id="@+id/ActivityLabel"
android:layout_width="fill_parent" 
android:layout_height="fill_parent">
</TextView>
  
<Spinner  
     android:id="@+id/ActivityTypeSpinner"  
     android:prompt="@string/activity_type_prompt"
     android:layout_height="wrap_content"  
     android:layout_width="fill_parent"  
     android:entries="@array/activity_types">  
</Spinner>

<TextView      
android:text="@string/distance_label"
android:id="@+id/DistanceLabel"
android:layout_width="fill_parent" 
android:layout_height="fill_parent">
</TextView>

<LinearLayout 
    android:id="@+id/DistanceLayout" 
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">
<EditText 
    android:hint="@string/distance_value_prompt"  
    android:id="@+id/DistanceValueText" 
    android:layout_width="wrap_content" 
    android:lines="1"
    android:inputType="numberDecimal"
    android:layout_height="wrap_content">
</EditText>
<Spinner 
    android:id="@+id/DistanceUnitsSpinner" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:prompt="@string/distance_units_prompt" 
    android:entries="@array/distance_units">
</Spinner>
<EditText 
    android:hint="@string/duration_prompt"  
    android:id="@+id/DurationText" 
    android:inputType="textNoSuggestions"
    android:lines="1"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
</EditText>
</LinearLayout>

<TextView      
android:text="@string/message_label"
android:id="@+id/MessageLabel"
android:layout_width="fill_parent" 
android:layout_height="fill_parent">
</TextView>

<EditText  
     android:id="@+id/WorkoutMessageText"  
     android:layout_height="wrap_content"  
     android:hint="@string/workout_note_prompt"  
     android:inputType="textMultiLine"  
     android:lines="2"  
     android:layout_width="fill_parent">  
</EditText> 

<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">
    <TableRow>

<TextView      
android:text="@string/title_label"
android:id="@+id/TitleLabel"
android:layout_width="fill_parent" 
android:layout_height="fill_parent">
</TextView>
<TextView      
android:text="@string/felt_label"
android:id="@+id/FeltLabel"
android:layout_width="fill_parent" 
android:layout_height="fill_parent">
</TextView>

    </TableRow>
    <TableRow>
<EditText 
    android:hint="@string/title_prompt"  
    android:id="@+id/WorkoutTitleText" 
    android:inputType="textNoSuggestions"
    android:lines="1"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
</EditText>
<Spinner  
     android:id="@+id/FeltSpinner"  
     android:prompt="@string/felt_prompt"
     android:layout_height="wrap_content"  
     android:layout_width="fill_parent"  
     android:entries="@array/felt_choices">  
</Spinner>
</TableRow>
</TableLayout>

<TextView      
android:text="@string/date_label"
android:id="@+id/DateLabel"
android:layout_width="fill_parent" 
android:layout_height="fill_parent">
</TextView>

<Spinner  
     android:id="@+id/DaySpinner"  
     android:prompt="@string/day_choice_prompt"
     android:layout_height="wrap_content"  
     android:layout_width="fill_parent"  
     android:entries="@array/day_choices">  
</Spinner>

<TextView      
     android:id="@+id/Spacer"  
    android:text=""
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
</TextView>

<LinearLayout 
    android:id="@+id/ControlLayout" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content">
<Button 
    android:text="@string/post_workout_text" 
    android:id="@+id/PostButton" 
    android:onClick="postWorkout"
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content">
</Button>
<Button 
    android:text="@string/cancel_text" 
    android:id="@+id/CancelButton" 
    android:onClick="cancelPost"
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content">
</Button>
</LinearLayout>





</LinearLayout>
</ScrollView>
